# pcr-momentum

./: .env.example  .gitignore  README.md
backend/: alembic.ini  log_setup.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_seed.py
backend/brokers/upstox/: __init__.py  _http.py  auth.py  brokerage.py  capital.py  client.py  envelopes.py  historical_candles.py  holidays.py  instruments.py  kill_switch.py  market_data.py  market_status.py  market_streamer.py  market_timings.py  option_chain.py  option_contract.py  option_greeks.py  orders.py  portfolio_streamer.py  positions.py  profile.py  rate_limiter.py  static_ips.py
backend/engines/: __init__.py
backend/engines/api_gateway/: __init__.py  auth.py  deps.py  errors.py  main.py  util.py  view_router.py  ws_endpoints.py
backend/engines/background/: __init__.py  __main__.py  instrument_refresh.py  kill_switch_poller.py  log_rotation.py  main.py  pg_maintenance.py  report_drainer.py
backend/engines/data_pipeline/: __init__.py  __main__.py  aggregator.py  main.py  parser.py  pre_market_subscriber.py  state.py  subscription_manager.py  tick_processor.py  ws_io.py
backend/engines/health/: __init__.py  __main__.py  main.py  probes.py
backend/engines/init/: __init__.py  __main__.py  auth_bootstrap.py  holiday_check.py  instruments_loader.py  main.py  postgres_hydrator.py  redis_template.py  strike_basket_builder.py
backend/state/: __init__.py  config_loader.py  credentials_store.py  crypto.py  keys.py  postgres_client.py  redis_client.py  streams.py
backend/tests/: conftest.py  test_basket_helpers.py  test_config_loader.py  test_credentials_store.py  test_crypto.py  test_dp_aggregator.py  test_dp_parser.py  test_dp_subscription_manager.py  test_dp_tick_processor.py  test_holiday_check.py  test_keys.py  test_log_setup.py  test_lua.py  test_migrations.py  test_postgres_client.py  test_postgres_hydrator.py  test_redis_client.py  test_redis_template.py  test_schemas.py  test_streams.py
(+171 files in other folders)
