[project]
name = "premium-diff-bot"
version = "0.1.0"
description = "Premium-Diff Multi-Index Trading Bot — backend"
requires-python = ">=3.12"

# Dependencies are pinned in requirements.txt (runtime) and requirements-dev.txt (test/lint).
# This file exists only for tool configuration (pytest, ruff, mypy).

# ---------------------------------------------------------------
# pytest
# ---------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: requires live Redis or Postgres",
    "slow: long-running test",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:asyncio",
    "ignore::DeprecationWarning:pydantic",
]

# ---------------------------------------------------------------
# ruff
# ---------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # bugbear
    "UP",     # pyupgrade
    "SIM",    # simplify
    "RUF",    # ruff-specific
]
ignore = [
    "E501",   # line length handled by formatter
    "B008",   # FastAPI Depends() in defaults is idiomatic
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------
# mypy
# ---------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
no_implicit_reexport = true
disallow_untyped_defs = true
ignore_missing_imports = true
files = ["state", "log_setup.py"]
